@@ -146,6 +146,7 @@
     <string id="30192">Merger</string>
     <string id="30193">Launcher start options</string>
     <string id="30194">Add New Launcher</string>
+    <string id="30195">Directly open Advanced Launcher into default category</string>
 
     <string id="30201">default</string>
     <string id="30202">experienced users</string>
